add images and captions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,74 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="look-book">
+        <div class="row">
+          <div>
+            <img src="./boolando_images/img/1.webp" alt="" />
+            <section>
+              <p>Levi's</p>
+              <h2>Relaxed fit tee unisex</h2>
+              <p>
+                <span class="d-price">14,99 &euro;</span>
+                <span class="o-price">29,99 &euro;</span>
+              </p>
+            </section>
+          </div>
+          <div>
+            <img src="./boolando_images/img/2.webp" alt="" />
+            <section>
+              <p>Guess</p>
+              <h2>roses tee</h2>
+              <p>
+                <span class="d-price">20,99 &euro;</span>
+                <span class="o-price">29,99 &euro;</span>
+              </p>
+            </section>
+          </div>
+          <div>
+            <img src="./boolando_images/img/3.webp" alt="" />
+            <section>
+              <p>Come Zucchero Filato</p>
+              <h2>voglia di colori pastello</h2>
+              <p>
+                <span class="d-price">129,99 &euro;</span>
+                <span class="o-price">184,99 &euro;</span>
+              </p>
+            </section>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <img src="./boolando_images/img/4.webp" alt="" />
+            <section>
+              <p>Levi's</p>
+              <h2>tee unisex</h2>
+              <p>
+                <span class="d-price">14,99 &euro;</span>
+                <span class="o-price"></span>29,99 &euro;
+              </p>
+            </section>
+          </div>
+          <div>
+            <img src="./boolando_images/img/5.webp" alt="" />
+            <section>
+              <p>Maya Deluxe</p>
+              <h2>stipe bodice</h2>
+              <p class="d-price">99,99 &euro;</p>
+            </section>
+          </div>
+          <div>
+            <img src="./boolando_images/img/6.webp" alt="" />
+            <section>
+              <p>Esprit</p>
+              <h2>maglione - black</h2>
+              <p class="d-price">29,99 &euro;</p>
+            </section>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <footer></footer>
   </body>
