add hearts and discounts

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
       <div class="look-book">
         <div class="row">
           <div>
-            <img src="./boolando_images/img/1.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/1.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+              <p class="detail">
+                <span class="discount">-50 %</span
+                ><span class="ethics">Sostenibilit&agrave;</span>
+              </p>
+            </div>
             <section>
               <p>Levi's</p>
               <h2>Relaxed fit tee unisex</h2>
@@ -43,7 +50,11 @@
             </section>
           </div>
           <div>
-            <img src="./boolando_images/img/2.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/2.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+              <p class="detail"><span class="discount">-30 %</span></p>
+            </div>
             <section>
               <p>Guess</p>
               <h2>roses tee</h2>
@@ -54,7 +65,11 @@
             </section>
           </div>
           <div>
-            <img src="./boolando_images/img/3.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/3.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+              <p class="detail"><span class="discount">-30 %</span></p>
+            </div>
             <section>
               <p>Come Zucchero Filato</p>
               <h2>voglia di colori pastello</h2>
@@ -67,7 +82,14 @@
         </div>
         <div class="row">
           <div>
-            <img src="./boolando_images/img/4.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/4.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+              <p class="detail">
+                <span class="discount">- 50 %</span
+                ><span class="ethics">Sostenibilit&agrave;</span>
+              </p>
+            </div>
             <section>
               <p>Levi's</p>
               <h2>tee unisex</h2>
@@ -78,7 +100,10 @@
             </section>
           </div>
           <div>
-            <img src="./boolando_images/img/5.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/5.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+            </div>
             <section>
               <p>Maya Deluxe</p>
               <h2>stipe bodice</h2>
@@ -86,7 +111,13 @@
             </section>
           </div>
           <div>
-            <img src="./boolando_images/img/6.webp" alt="" />
+            <div class="look">
+              <img src="./boolando_images/img/6.webp" alt="" />
+              <i class="fa-solid fa-heart"></i>
+              <p class="detail">
+                <span class="ethics">Sostenibilit&agrave;</span>
+              </p>
+            </div>
             <section>
               <p>Esprit</p>
               <h2>maglione - black</h2>
