--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="container">
-        <nav>Donna Uomo Bamini</nav>
+        <nav>Donna Uomo Bambini</nav>
         <div>
           <img src="./boolando_images/img/boolean-logo.png" alt="Boolean" />
         </div>
@@ -95,7 +95,7 @@
               <h2>tee unisex</h2>
               <p>
                 <span class="d-price">14,99 &euro;</span>
-                <span class="o-price"></span>29,99 &euro;
+                <span class="o-price">29,99 &euro;</span>
               </p>
             </section>
           </div>
@@ -128,6 +128,25 @@
       </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="bottom">
+        <div class="links">
+          <h5>Boolando s.r.l.</h5>
+          <nav>
+            <a href="#">Informazioni legali </a>
+            <a href="#">Informativa sulla privacy</a>
+            <a href="#">Diritto di recesso</a>
+          </nav>
+        </div>
+        <div class="social">
+          <p>Trovaci anche su</p>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+          <i class="fa-brands fa-pinterest"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
