--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
           <div>
             <div class="look">
-              <img src="./boolando_images/img/1.webp" alt="" />
+              <img src="./boolando_images/img/1.webp" alt="" class="img1" />
               <i class="fa-solid fa-heart"></i>
               <p class="detail">
                 <span class="discount">-50 %</span
@@ -79,8 +79,6 @@
               </p>
             </section>
           </div>
-        </div>
-        <div class="row">
           <div>
             <div class="look">
               <img src="./boolando_images/img/4.webp" alt="" />
