--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <body>
     <header>
       <div class="container">
-        <nav>Donna Uomo Bambini</nav>
+        <nav>
+          <a href="#">Donna</a>
+          <a href="#">Uomo</a>
+          <a href="#">Bambini</a>
+        </nav>
         <div>
           <img src="./boolando_images/img/boolean-logo.png" alt="Boolean" />
         </div>
@@ -30,56 +34,56 @@
 
     <main>
       <div class="look-book">
-        <div class="row">
-          <div>
+        <div class="card">
+          <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/1.webp" alt="" class="img1" />
+              <img src="./boolando_images/img/1.webp" alt="" class="alt-img" />
               <i class="fa-solid fa-heart"></i>
               <p class="detail">
                 <span class="discount">-50 %</span
                 ><span class="ethics">Sostenibilit&agrave;</span>
               </p>
             </div>
-            <section>
+            <div class="caption">
               <p>Levi's</p>
               <h2>Relaxed fit tee unisex</h2>
               <p>
                 <span class="d-price">14,99 &euro;</span>
                 <span class="o-price">29,99 &euro;</span>
               </p>
-            </section>
+            </div>
           </div>
-          <div>
+          <div class="item">
             <div class="look">
               <img src="./boolando_images/img/2.webp" alt="" />
               <i class="fa-solid fa-heart"></i>
               <p class="detail"><span class="discount">-30 %</span></p>
             </div>
-            <section>
+            <div class="caption">
               <p>Guess</p>
               <h2>roses tee</h2>
               <p>
                 <span class="d-price">20,99 &euro;</span>
                 <span class="o-price">29,99 &euro;</span>
               </p>
-            </section>
+            </div>
           </div>
-          <div>
+          <div class="item">
             <div class="look">
               <img src="./boolando_images/img/3.webp" alt="" />
               <i class="fa-solid fa-heart"></i>
               <p class="detail"><span class="discount">-30 %</span></p>
             </div>
-            <section>
+            <div class="caption">
               <p>Come Zucchero Filato</p>
               <h2>voglia di colori pastello</h2>
               <p>
                 <span class="d-price">129,99 &euro;</span>
                 <span class="o-price">184,99 &euro;</span>
               </p>
-            </section>
+            </div>
           </div>
-          <div>
+          <div class="item">
             <div class="look">
               <img src="./boolando_images/img/4.webp" alt="" />
               <i class="fa-solid fa-heart"></i>
@@ -88,27 +92,27 @@
                 ><span class="ethics">Sostenibilit&agrave;</span>
               </p>
             </div>
-            <section>
+            <div class="caption">
               <p>Levi's</p>
               <h2>tee unisex</h2>
               <p>
                 <span class="d-price">14,99 &euro;</span>
                 <span class="o-price">29,99 &euro;</span>
               </p>
-            </section>
+            </div>
           </div>
-          <div>
+          <div class="item">
             <div class="look">
               <img src="./boolando_images/img/5.webp" alt="" />
               <i class="fa-solid fa-heart"></i>
             </div>
-            <section>
+            <div class="caption">
               <p>Maya Deluxe</p>
               <h2>stipe bodice</h2>
               <p class="d-price">99,99 &euro;</p>
-            </section>
+            </div>
           </div>
-          <div>
+          <div class="item">
             <div class="look">
               <img src="./boolando_images/img/6.webp" alt="" />
               <i class="fa-solid fa-heart"></i>
@@ -116,11 +120,11 @@
                 <span class="ethics">Sostenibilit&agrave;</span>
               </p>
             </div>
-            <section>
+            <div class="caption">
               <p>Esprit</p>
               <h2>maglione - black</h2>
               <p class="d-price">29,99 &euro;</p>
-            </section>
+            </div>
           </div>
         </div>
       </div>
