--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         <div class="card">
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/1.webp" alt="" class="alt-img" />
+              <img src="./boolando_images/img/1.webp" alt="" class="img-1" />
+              <img
+                src="./boolando_images/img/1b.webp"
+                alt=""
+                class="alt-img-1"
+              />
               <i class="fa-solid fa-heart"></i>
               <p class="detail">
                 <span class="discount">-50 %</span
@@ -55,7 +60,12 @@
           </div>
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/2.webp" alt="" />
+              <img src="./boolando_images/img/2.webp" alt="" class="img-2" />
+              <img
+                src="./boolando_images/img/2b.webp"
+                alt=""
+                class="alt-img-2"
+              />
               <i class="fa-solid fa-heart"></i>
               <p class="detail"><span class="discount">-30 %</span></p>
             </div>
@@ -70,7 +80,12 @@
           </div>
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/3.webp" alt="" />
+              <img src="./boolando_images/img/3.webp" alt="" class="img-3" />
+              <img
+                src="./boolando_images/img/3b.webp"
+                alt=""
+                class="alt-img-3"
+              />
               <i class="fa-solid fa-heart"></i>
               <p class="detail"><span class="discount">-30 %</span></p>
             </div>
@@ -85,7 +100,12 @@
           </div>
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/4.webp" alt="" />
+              <img src="./boolando_images/img/4.webp" alt="" class="img-4" />
+              <img
+                src="./boolando_images/img/4b.webp"
+                alt=""
+                class="alt-img-4"
+              />
               <i class="fa-solid fa-heart"></i>
               <p class="detail">
                 <span class="discount">- 50 %</span
@@ -103,7 +123,12 @@
           </div>
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/5.webp" alt="" />
+              <img src="./boolando_images/img/5.webp" alt="" class="img-5" />
+              <img
+                src="./boolando_images/img/5b.webp"
+                alt=""
+                class="alt-img-5"
+              />
               <i class="fa-solid fa-heart"></i>
             </div>
             <div class="caption">
@@ -114,7 +139,12 @@
           </div>
           <div class="item">
             <div class="look">
-              <img src="./boolando_images/img/6.webp" alt="" />
+              <img src="./boolando_images/img/6.webp" alt="" class="img-6" />
+              <img
+                src="./boolando_images/img/6b.webp"
+                alt=""
+                class="alt-img-6"
+              />
               <i class="fa-solid fa-heart"></i>
               <p class="detail">
                 <span class="ethics">Sostenibilit&agrave;</span>
